manifests/dev/calibre/Deployment-calibre-calibre-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: calibre
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: calibre-web
    app.kubernetes.io/version: 0.6.12
    helm.sh/chart: calibre-web-8.4.2
  name: calibre-calibre-web
  namespace: calibre
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: calibre
      app.kubernetes.io/name: calibre-web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: calibre
        app.kubernetes.io/name: calibre-web
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: PGID
              value: "1001"
            - name: PUID
              value: "1001"
            - name: TZ
              value: UTC
          image: linuxserver/calibre-web:version-0.6.12
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8083
            timeoutSeconds: 1
          name: calibre-calibre-web
          ports:
            - containerPort: 8083
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8083
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 8083
            timeoutSeconds: 1
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      serviceAccountName: default
