manifests/dev/calibre/Ingress-calibre-calibre-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: calibre
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: calibre-web
    app.kubernetes.io/version: 0.6.12
    helm.sh/chart: calibre-web-8.4.2
  name: calibre-calibre-web
  namespace: calibre
spec:
  ingressClassName: tailscale
  rules:
    - host: calibre.bearded-snake.ts.net
      http:
        paths:
          - backend:
              service:
                name: calibre-calibre-web
                port:
                  number: 8083
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - calibre.bearded-snake.ts.net
